--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,5 +1,5 @@
 .slider_bg_1{
-    background-image: url(../img/banner/banner.png);
+    background-image: url(../img/banner/banner.jpeg);
 }
 .slider_bg_2{
     background-image: url(../img/banner/banner2.png);
