--- a/css/style.css
+++ b/css/style.css
@@ -1261,7 +1261,7 @@ h3 {
 
 /* line 1, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.jpeg);
+  background-image: url(../img/banner/sumitlogo.jpg);
 }
 
 /* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
