--- a/css/style.css
+++ b/css/style.css
@@ -1266,9 +1266,12 @@ h3 {
 
 /* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_bg_2 {
-  background-image: url(../img/banner/banner2.png);
+  background-image: url(../img/banner/sumitlogo2.png);
 }
-
+/* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
+.slider_bg_3 {
+  background-image: url(../img/banner/banner.jpeg);
+}
 /* line 8, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_area .single_slider {
   height: 900px;
