--- a/css/style.css
+++ b/css/style.css
@@ -1261,16 +1261,21 @@ h3 {
 
 /* line 1, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/sumitlogo.jpg);
+  background-image: url(../img/banner/bann1.jpg);
 }
 
 /* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_bg_2 {
-  background-image: url(../img/banner/sumitlogo2.png);
+  background-image: url(../img/banner/bann2.png);
 }
 /* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_bg_3 {
-  background-image: url(../img/banner/banner.jpeg);
+  background-image: url(../img/banner/bann3.png);
+}
+
+/* line 4, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
+.slider_bg_4 {
+  background-image: url(../img/banner/bann4.jpg);
 }
 /* line 8, ../../Arafath/CL/Cl November/221. Music/HTML/scss/_slider.scss */
 .slider_area .single_slider {
